--- a/assainment1.css
+++ b/assainment1.css
@@ -16,5 +16,34 @@ height: 100vh;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
-}
+display: flex;
+align-items: center;
 
+
+}
+.banner-content{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+.title{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 65px;
+    
+    text-align: right;
+    margin: bottom 5px; 
+    
+}
+.text{
+    text-align-last:right ;
+    margin-top: 10px;
+}
+.banner-button{
+    margin-top: 20px;
+    padding: 12px 15px;
+    background-color: rgb(255, 111, 0);
+    border: 0px solid #000;
+    border-radius: 3px;
+    color: aliceblue;
+}
