--- a/assainment1.css
+++ b/assainment1.css
@@ -2,25 +2,26 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+    font-family: 'Work Sans', sans-serif;
+}/*for every thing*/
 .container{
     max-width: 1200px;
     width:100%;
     margin:0 auto;
 
-}
-.banner-container{
-background-image: url('./images/banner2.png');
-width: 100%;
-height: 100vh;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-display: flex;
-align-items: center;
-
-
-}
+}.banner-container{
+    background-image: url('./images/banner/banner2.png');
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    
+    
+    }
+/*background image*/
 .banner-content{
     display: flex;
     flex-direction: column;
@@ -46,4 +47,97 @@ align-items: center;
     border: 0px solid #000;
     border-radius: 3px;
     color: aliceblue;
+}
+.second-container{
+    align-items: center;
+    display: flex;
+    margin: 30px 200px 30px;
+
+}
+
+.title-text{
+
+    font-size: 42px;
+    margin-bottom:19px ;
+}
+.style{
+    display: inline;
+    margin-left:60px ;
+}
+.third-title{
+    font-size: 50px;
+    text-align: center;
+    margin-top: 65px ;
+}
+.about-info-container{
+    margin-top: 50px;
+    display:flex;
+    justify-content: space-around;
+    font-size: 20px;
+}
+
+.info-title{
+    margin-bottom: 5px;
+    margin-top: 15px;
+    font-weight: 800;
+}
+.footer-button{
+    border:3px solid rgb(255, 111, 0);
+    background-color: white;
+    padding: 13px 22px;
+    border-radius: 6px;
+    color: rgb(255, 111, 0);
+    font-size: 14px;
+    font-weight: 600;
+    margin-top:30px ;
+      
+}
+.second-back-img{
+    margin-top: 80px;
+    background-image: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%),url('./images/watch.png');
+    width: 100%;   
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 15px;
+    
+    
+    
+}
+.watch-content{
+    padding: 50px;
+    padding-bottom:60px ;
+    font-size: 27px;
+    color: azure;
+    
+}
+.footer{
+    background-color: rgb(25, 24, 24);
+    color: white;
+    margin-top:60px;
+    
+
+
+}
+.end-content{
+    padding: 110px;
+    padding-left:230px ;
+    display: flex;
+}
+.footer-input{
+    background-color: rgb(23, 22, 22);
+    color: aliceblue;
+    padding: 15px 30px;
+    border-radius: 7px;
+    margin-top: 30px;
+}
+.footer-subscribe{
+    padding: 12px 25px;
+    margin-top: 15px;
+    background-color: whitesmoke;
+    color: orange;
+    border-radius:5px ;
+}
+.subscribe{
+    padding-left: 350px;
 }
